# haskell-learning

./: .gitignore  haskell-learning.cabal
app/: CharCounter.hs  ErrorHandler.hs  Failure.hs  Fold.hs  LinkedList.hs  Main.hs  MyFunctor.hs  MyMonad.hs  MyMonoid.hs  Person.hs  Rational.hs  RevString.hs  SafeDivide.hs  Set.hs
general/: haskell-learning.cabal
general/app/: Failure.hs  Main.hs  MyApplicative.hs  Util.hs
interpreter/: interpreter.cabal
interpreter/app/: Examples.hs  Main.hs  Parser.hs
my-servant/: CHANGELOG.md  LICENSE  my-servant.cabal
my-servant/app/: Main.hs
parser/: parser.cabal
parser/app/: Main.hs
